plugins/custom-tooltip/assets/css/tooltip.css
/* Overlay (modal popups)
------------------------------------------*/
.tooltip-overlay {
	content: "";
	display: block;
	position: fixed; /* could also be absolute */
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	z-index: 10;
	background-color: rgba(255,255,255,0.7);
	transition: opacity 500ms ease-in-out;
	opacity: 0;
}

.on {
	transition: opacity 500ms ease-in-out;
	opacity: 1;
}

.nodisplay {
	display:none;
}



/* Tooltip content
------------------------------------------*/

.tooltip-content {
	/* visibility: hidden; */
	/* opacity:0; */
	display: none;
	position:absolute;
	z-index: 10;
	transition: all 0.2s ease-in-out;
}


.tooltip-content .wrap {
	padding: 7px 20px 5px 20px;
	color:#4e4e4e;
	/* border:1px solid #737373; */
	background:#f5f5f5;
	font-size: 1.7rem;
	line-height: Erem;
	font-family: 'Oswald', sans-serif;
	border-radius:4px;
	box-shadow: 5px 5px 8px #CCC;
	min-width: 200px;
	min-height:50px;
	white-space: nowrap;
	overflow: hidden;
}


/* Tooltip events
------------------------------------------*/
.tooltips-closed .tooltip-onhover:hover .tooltip-content.hover {
	/* opacity:1; */
	display:block;
}

.tooltip-content.click {
	z-index: 20;
}

/* Tooltip content other fields
------------------------------------------*/
.tooltip-content a {
	text-decoration: underline;
}

.tooltip-img {
	display:inline-block;
	vertical-align: middle;
	width: 80px;
}

h4.tooltip-title {
	font-family: Vollkorn, sans-serif;
	display:inline-block;
	vertical-align: middle;
	text-transform: initial;
	font-variant: initial;
    margin-left: 15px;
}

.tooltip-callout {
	z-index:20;
	position:absolute;
	border:0;
}


/* FORMAT VARIATIONS
-----------------------------------------------*/

.tooltip-content.modal .wrap {
	font-size: 2rem;
	color: #676767;
	/* border:5px solid #737373; */
	/* border-radius:0px; */
}


.tooltip-content.big-font .wrap {
	font-size: 2rem;
	color:#5a5a5a;
}

.tooltip-content.fancy .wrap {
	background: #f5ebe4;
    color: #776559;
    border: none;
    box-shadow: 1px 1px 8px 6px #909090;
}


.uppercase h4.tooltip-title{
	text-transform: uppercase;
}

.modal h4.tooltip-title {
	font-size: 4rem;
	color: #737373;
}

.fancy h4.tooltip-title {
	color: #c7b9af;
}

.tooltip-content.yellow .wrap {
	border:1px solid #DCA;
	background:#fffAF0;
}

.tooltip-content.transparent .wrap {
	border:0px;
	background:transparent;
	box-shadow: none;
}

.tooltip-content.transparent .callout {
	display:none;
}

/*Tooltip positioning above */
.tooltip-content.above {
	padding-bottom : 20px;
	/* top: -50px; */
	bottom: 45px;
}
.above img.callout {
	bottom: 9px;
}

/*Tooltip positioning left */
.tooltip-content.left  {
	left: 0px;
}
.left img.callout {
	left: 40px;
}

/*Tooltip positioning right */
.tooltip-content.right  {
	right:0;
}
.right img.callout {
	right: 40px;
}

/*Tooltip positioning right */
.tooltip-content.center  {
	left:-50px;
}
.center img.callout {
	left: 80px;
}

/*Tooltip positioning large */
.tooltip-content.left.large {
	min-width: 300px;
    left:-100px;
}
.left.large img.callout {
	left: 100px;
}

/* Modal Tooltip (fixed positioning) */
.tooltip-content.modal {
	position: fixed;
	z-index: 100000;
	max-width: 500px;
	max-height: 200px;
	margin: 5% auto; /* Will not center vertically and won't work in IE6/7. */
	left: 0;
	right: 0;
	top:20%;
}

/* MEDIA QUERIES
---------------------------------------------------*/

@media only screen and (max-width:570px) {

	.tooltip-content.modal {
		top:0;
	}

}

